--- a/Augustus Fashion/Augustus Fashion.csproj
+++ b/Augustus Fashion/Augustus Fashion.csproj
@@ -109,6 +109,12 @@
     <Compile Include="View\ExcluirCliente.Designer.cs">
       <DependentUpon>ExcluirCliente.cs</DependentUpon>
     </Compile>
+    <Compile Include="View\ExcluirFuncionario.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View\ExcluirFuncionario.Designer.cs">
+      <DependentUpon>ExcluirFuncionario.cs</DependentUpon>
+    </Compile>
     <Compile Include="View\ListarCliente.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -150,6 +156,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="View\ExcluirCliente.resx">
       <DependentUpon>ExcluirCliente.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="View\ExcluirFuncionario.resx">
+      <DependentUpon>ExcluirFuncionario.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="View\ListarCliente.resx">
       <DependentUpon>ListarCliente.cs</DependentUpon>
