--- a/Augustus Fashion/Augustus Fashion.csproj
+++ b/Augustus Fashion/Augustus Fashion.csproj
@@ -77,7 +77,7 @@
     <Compile Include="Model\ClienteModel.cs" />
     <Compile Include="Model\FuncionarioModel.cs" />
     <Compile Include="Model\Pessoa.cs" />
-    <Compile Include="Validações\ValidacoesCadastro.cs" />
+    <Compile Include="Model\Testes.cs" />
     <Compile Include="View\AlterarCliente.cs">
       <SubType>Form</SubType>
     </Compile>
