--- a/Augustus Fashion/Augustus Fashion.csproj
+++ b/Augustus Fashion/Augustus Fashion.csproj
@@ -81,6 +81,7 @@
     <Compile Include="Model\FuncionarioModel.cs" />
     <Compile Include="Model\Pessoa.cs" />
     <Compile Include="Model\Testes.cs" />
+    <Compile Include="ValueObjects\CPF.cs" />
     <Compile Include="View\AlterarCliente.cs">
       <SubType>Form</SubType>
     </Compile>
