--- a/Augustus Fashion/Augustus Fashion.csproj
+++ b/Augustus Fashion/Augustus Fashion.csproj
@@ -59,6 +59,7 @@
   <ItemGroup>
     <Compile Include="Controller\ClienteControl.cs" />
     <Compile Include="Controller\FuncionarioControl.cs" />
+    <Compile Include="Controller\ProdutoControl.cs" />
     <Compile Include="crudDataSet.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -77,72 +78,105 @@
     <Compile Include="DAO\ClienteDAO.cs" />
     <Compile Include="DAO\conexao.cs" />
     <Compile Include="DAO\FuncionarioDAO.cs" />
+    <Compile Include="DAO\ProdutoDAO.cs" />
     <Compile Include="FluentValidation\CEPValidation.cs" />
     <Compile Include="FluentValidation\ClienteValidation.cs" />
     <Compile Include="FluentValidation\CPFValidation.cs" />
     <Compile Include="FluentValidation\EnderecoValidation.cs" />
     <Compile Include="FluentValidation\LimiteValidation.cs" />
     <Compile Include="FluentValidation\PessoaValidation.cs" />
-    <Compile Include="Model\ClienteListagem.cs" />
-    <Compile Include="Model\ClienteModel.cs" />
+    <Compile Include="Model\Cliente\ClienteListagem.cs" />
+    <Compile Include="Model\Cliente\ClienteModel.cs" />
     <Compile Include="Model\EnderecoModel.cs" />
-    <Compile Include="Model\FuncionarioListagem.cs" />
-    <Compile Include="Model\FuncionarioModel.cs" />
+    <Compile Include="Model\Funcionário\FuncionarioListagem.cs" />
+    <Compile Include="Model\Funcionário\FuncionarioModel.cs" />
+    <Compile Include="Model\Produto\ProdutoListagem.cs" />
     <Compile Include="Model\Pessoa.cs" />
+    <Compile Include="Model\Produto\ProdutoModel.cs" />
     <Compile Include="Model\Testes.cs" />
     <Compile Include="ValueObjects\CEP.cs" />
     <Compile Include="ValueObjects\CPF.cs" />
-    <Compile Include="View\AlterarCliente.cs">
+    <Compile Include="View\Cliente\AlterarCliente.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="View\AlterarCliente.Designer.cs">
+    <Compile Include="View\Cliente\AlterarCliente.Designer.cs">
       <DependentUpon>AlterarCliente.cs</DependentUpon>
     </Compile>
-    <Compile Include="View\AlterarFuncionario.cs">
+    <Compile Include="View\Funcionário\AlterarFuncionario.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="View\AlterarFuncionario.Designer.cs">
+    <Compile Include="View\Funcionário\AlterarFuncionario.Designer.cs">
       <DependentUpon>AlterarFuncionario.cs</DependentUpon>
     </Compile>
-    <Compile Include="View\CadastroCliente.cs">
+    <Compile Include="View\Cliente\CadastroCliente.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="View\CadastroCliente.Designer.cs">
+    <Compile Include="View\Cliente\CadastroCliente.Designer.cs">
       <DependentUpon>CadastroCliente.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="View\CadastroFuncionario.cs">
+    <Compile Include="View\Funcionário\CadastroFuncionario.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="View\CadastroFuncionario.Designer.cs">
+    <Compile Include="View\Funcionário\CadastroFuncionario.Designer.cs">
       <DependentUpon>CadastroFuncionario.cs</DependentUpon>
     </Compile>
-    <Compile Include="View\ListarCliente.cs">
+    <Compile Include="View\Produto\CadastroProduto.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="View\ListarCliente.Designer.cs">
+    <Compile Include="View\Produto\CadastroProduto.Designer.cs">
+      <DependentUpon>CadastroProduto.cs</DependentUpon>
+    </Compile>
+    <Compile Include="View\Cliente\ListarCliente.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View\Cliente\ListarCliente.Designer.cs">
       <DependentUpon>ListarCliente.cs</DependentUpon>
     </Compile>
-    <Compile Include="View\ListarFuncionario.cs">
+    <Compile Include="View\Funcionário\ListarFuncionario.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="View\ListarFuncionario.Designer.cs">
+    <Compile Include="View\Funcionário\ListarFuncionario.Designer.cs">
       <DependentUpon>ListarFuncionario.cs</DependentUpon>
     </Compile>
-    <Compile Include="View\TelaInicial.cs">
+    <Compile Include="View\Produto\ListarProduto.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="View\TelaInicial.Designer.cs">
+    <Compile Include="View\Produto\ListarProduto.Designer.cs">
+      <DependentUpon>ListarProduto.cs</DependentUpon>
+    </Compile>
+    <Compile Include="View\Telas Centrais\TelaCliente.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View\Telas Centrais\TelaCliente.Designer.cs">
+      <DependentUpon>TelaCliente.cs</DependentUpon>
+    </Compile>
+    <Compile Include="View\Telas Centrais\TelaFuncionario.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View\Telas Centrais\TelaFuncionario.Designer.cs">
+      <DependentUpon>TelaFuncionario.cs</DependentUpon>
+    </Compile>
+    <Compile Include="View\Telas Centrais\TelaInicial.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View\Telas Centrais\TelaInicial.Designer.cs">
       <DependentUpon>TelaInicial.cs</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="View\AlterarCliente.resx">
+    <Compile Include="View\Telas Centrais\TelaProduto.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View\Telas Centrais\TelaProduto.Designer.cs">
+      <DependentUpon>TelaProduto.cs</DependentUpon>
+    </Compile>
+    <EmbeddedResource Include="View\Cliente\AlterarCliente.resx">
       <DependentUpon>AlterarCliente.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="View\AlterarFuncionario.resx">
+    <EmbeddedResource Include="View\Funcionário\AlterarFuncionario.resx">
       <DependentUpon>AlterarFuncionario.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="View\CadastroCliente.resx">
+    <EmbeddedResource Include="View\Cliente\CadastroCliente.resx">
       <DependentUpon>CadastroCliente.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
@@ -155,16 +189,25 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
-    <EmbeddedResource Include="View\CadastroFuncionario.resx">
+    <EmbeddedResource Include="View\Funcionário\CadastroFuncionario.resx">
       <DependentUpon>CadastroFuncionario.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="View\ListarCliente.resx">
+    <EmbeddedResource Include="View\Produto\CadastroProduto.resx">
+      <DependentUpon>CadastroProduto.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="View\Cliente\ListarCliente.resx">
       <DependentUpon>ListarCliente.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="View\ListarFuncionario.resx">
+    <EmbeddedResource Include="View\Funcionário\ListarFuncionario.resx">
       <DependentUpon>ListarFuncionario.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="View\TelaInicial.resx">
+    <EmbeddedResource Include="View\Produto\ListarProduto.resx">
+      <DependentUpon>ListarProduto.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="View\Telas Centrais\TelaCliente.resx">
+      <DependentUpon>TelaCliente.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="View\Telas Centrais\TelaInicial.resx">
       <DependentUpon>TelaInicial.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="crudDataSet.xsc">
@@ -215,7 +258,22 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\Augustu%27s Fashion.png" />
+    <None Include="Resources\cliente.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\produto.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\funcionario.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\2303130_add_create_new_plus_icon.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\cadastrar.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\listar.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
