--- a/Augustus Fashion/Augustus Fashion.csproj
+++ b/Augustus Fashion/Augustus Fashion.csproj
@@ -94,6 +94,13 @@
     <Compile Include="Model\Pessoa.cs" />
     <Compile Include="Model\Produto\ProdutoModel.cs" />
     <Compile Include="Model\Testes.cs" />
+    <Compile Include="Model\Venda\CarrinhoModel.cs" />
+    <Compile Include="Model\Venda\Pedido.cs" />
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
     <Compile Include="ValueObjects\CEP.cs" />
     <Compile Include="ValueObjects\CPF.cs" />
     <Compile Include="View\Cliente\AlterarCliente.cs">
@@ -133,6 +140,18 @@
     </Compile>
     <Compile Include="View\Pedido\VendaPedido.Designer.cs">
       <DependentUpon>VendaPedido.cs</DependentUpon>
+    </Compile>
+    <Compile Include="View\Pedido\VendaPedido2.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View\Pedido\VendaPedido2.Designer.cs">
+      <DependentUpon>VendaPedido2.cs</DependentUpon>
+    </Compile>
+    <Compile Include="View\Pedido\VendaPedido3.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View\Pedido\VendaPedido3.Designer.cs">
+      <DependentUpon>VendaPedido3.cs</DependentUpon>
     </Compile>
     <Compile Include="View\Produto\AlterarProduto.cs">
       <SubType>Form</SubType>
@@ -199,16 +218,20 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
       <SubType>Designer</SubType>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
-    <Compile Include="Properties\Resources.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DependentUpon>Resources.resx</DependentUpon>
-      <DesignTime>True</DesignTime>
-    </Compile>
     <EmbeddedResource Include="View\Funcionário\CadastroFuncionario.resx">
       <DependentUpon>CadastroFuncionario.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="View\Pedido\VendaPedido.resx">
+      <DependentUpon>VendaPedido.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="View\Pedido\VendaPedido2.resx">
+      <DependentUpon>VendaPedido2.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="View\Pedido\VendaPedido3.resx">
+      <DependentUpon>VendaPedido3.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="View\Produto\AlterarProduto.resx">
       <DependentUpon>AlterarProduto.cs</DependentUpon>
@@ -301,6 +324,15 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\listar.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\search.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\search1.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\2303114_explore_lense_magnifier_search_searching_icon.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
