--- a/Augustus Fashion/Augustus Fashion.csproj
+++ b/Augustus Fashion/Augustus Fashion.csproj
@@ -22,6 +22,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <UseVSHostingProcess>true</UseVSHostingProcess>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -81,6 +82,7 @@
     <Compile Include="DAO\FuncionarioDAO.cs" />
     <Compile Include="DAO\ProdutoDAO.cs" />
     <Compile Include="DAO\VendaDAO.cs" />
+    <Compile Include="FluentValidation\CarrinhoValidation.cs" />
     <Compile Include="FluentValidation\CEPValidation.cs" />
     <Compile Include="FluentValidation\ClienteValidation.cs" />
     <Compile Include="FluentValidation\CPFValidation.cs" />
@@ -96,7 +98,7 @@
     <Compile Include="Model\Pessoa.cs" />
     <Compile Include="Model\Produto\ProdutoModel.cs" />
     <Compile Include="Model\Testes.cs" />
-    <Compile Include="Model\Venda\CarrinhoModel.cs" />
+    <Compile Include="Model\Venda\PedidoProdutoModel.cs" />
     <Compile Include="Model\Venda\PedidoModel.cs" />
     <Compile Include="Model\Venda\ValidarPreco.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
