--- a/Augustus Fashion/Augustus Fashion.csproj
+++ b/Augustus Fashion/Augustus Fashion.csproj
@@ -98,6 +98,7 @@
     <Compile Include="Model\Pessoa.cs" />
     <Compile Include="Model\Produto\ProdutoModel.cs" />
     <Compile Include="Model\Testes.cs" />
+    <Compile Include="Model\Venda\ListagemVendaModel.cs" />
     <Compile Include="Model\Venda\PedidoProdutoModel.cs" />
     <Compile Include="Model\Venda\PedidoModel.cs" />
     <Compile Include="Model\Venda\ValidarPreco.cs" />
@@ -234,6 +235,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="View\Funcionário\CadastroFuncionario.resx">
       <DependentUpon>CadastroFuncionario.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="View\Pedido\ListagemPedido.resx">
+      <DependentUpon>ListagemPedido.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="View\Pedido\VendaPedido.resx">
       <DependentUpon>VendaPedido.cs</DependentUpon>
