refatorando e consertando diversos erros

--- a/Augustus Fashion/Augustus Fashion.csproj
+++ b/Augustus Fashion/Augustus Fashion.csproj
@@ -109,6 +109,7 @@
     </Compile>
     <Compile Include="ValueObjects\CEP.cs" />
     <Compile Include="ValueObjects\CPF.cs" />
+    <Compile Include="ValueObjects\Dinheiro.cs" />
     <Compile Include="View\Cliente\AlterarCliente.cs">
       <SubType>Form</SubType>
     </Compile>
