--- a/Augustus Fashion/packages.config
+++ b/Augustus Fashion/packages.config
@@ -2,5 +2,10 @@
 <packages>
   <package id="Dapper" version="2.0.90" targetFramework="net472" />
   <package id="FluentValidation" version="10.3.4" targetFramework="net472" />
+  <package id="Google.Apis" version="1.55.0" targetFramework="net472" />
+  <package id="Google.Apis.Auth" version="1.55.0" targetFramework="net472" />
+  <package id="Google.Apis.Core" version="1.55.0" targetFramework="net472" />
+  <package id="Google.Apis.Gmail.v1" version="1.55.0.2510" targetFramework="net472" />
+  <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net472" />
   <package id="System.Data.SqlClient" version="4.8.3" targetFramework="net472" />
 </packages>
