--- a/Augustus Fashion/Augustus Fashion.csproj
+++ b/Augustus Fashion/Augustus Fashion.csproj
@@ -116,7 +116,8 @@
     <Compile Include="Model\Cliente\ClienteListagem.cs" />
     <Compile Include="Model\Cliente\ClienteModel.cs" />
     <Compile Include="Model\EnderecoModel.cs" />
-    <Compile Include="Model\FiltrosModel.cs" />
+    <Compile Include="Model\FiltrosClienteModel.cs" />
+    <Compile Include="Model\FiltrosVendaProdutoModel.cs" />
     <Compile Include="Model\Funcionário\FuncionarioListagem.cs" />
     <Compile Include="Model\Funcionário\FuncionarioModel.cs" />
     <Compile Include="Model\Produto\ProdutoListagem.cs" />
