--- a/Augustus Fashion/Augustus Fashion.csproj
+++ b/Augustus Fashion/Augustus Fashion.csproj
@@ -105,6 +105,8 @@
     <Compile Include="DAO\FuncionarioDAO.cs" />
     <Compile Include="DAO\ProdutoDAO.cs" />
     <Compile Include="DAO\VendaDAO.cs" />
+    <Compile Include="Enum\FiltrosAvancados.cs" />
+    <Compile Include="Enum\FiltrosSimples.cs" />
     <Compile Include="FluentValidation\CEPValidation.cs" />
     <Compile Include="FluentValidation\ClienteValidation.cs" />
     <Compile Include="FluentValidation\CPFValidation.cs" />
@@ -117,12 +119,13 @@
     <Compile Include="Model\Cliente\ClienteModel.cs" />
     <Compile Include="Model\EnderecoModel.cs" />
     <Compile Include="Model\FiltrosClienteModel.cs" />
-    <Compile Include="Model\FiltrosVendaProdutoModel.cs" />
+    <Compile Include="Model\FiltrosProdutoModel.cs" />
     <Compile Include="Model\Funcionário\FuncionarioListagem.cs" />
     <Compile Include="Model\Funcionário\FuncionarioModel.cs" />
     <Compile Include="Model\Produto\ProdutoListagem.cs" />
     <Compile Include="Model\Pessoa.cs" />
     <Compile Include="Model\Produto\ProdutoModel.cs" />
+    <Compile Include="Model\Relatorios\RelatorioProdutosModel.cs" />
     <Compile Include="Model\Testes.cs" />
     <Compile Include="Model\Venda\ListagemVendaModel.cs" />
     <Compile Include="Model\Venda\PedidoProdutoModel.cs" />
