--- a/Augustus Fashion/Augustus Fashion.csproj
+++ b/Augustus Fashion/Augustus Fashion.csproj
@@ -126,7 +126,7 @@
     <Compile Include="Model\Pessoa.cs" />
     <Compile Include="Model\Produto\ProdutoModel.cs" />
     <Compile Include="Model\Relatorios\RelatorioProdutosModel.cs" />
-    <Compile Include="Model\Testes.cs" />
+    <Compile Include="Model\Validacoes.cs" />
     <Compile Include="Model\Venda\ListagemVendaModel.cs" />
     <Compile Include="Model\Venda\PedidoProdutoModel.cs" />
     <Compile Include="Model\Venda\PedidoModel.cs" />
