finalizando a refdatoração das models para o novo modelo estruturado de sql dinamico

--- a/Augustus Fashion/Augustus Fashion.csproj
+++ b/Augustus Fashion/Augustus Fashion.csproj
@@ -105,8 +105,8 @@
     <Compile Include="DAO\FuncionarioDAO.cs" />
     <Compile Include="DAO\ProdutoDAO.cs" />
     <Compile Include="DAO\VendaDAO.cs" />
-    <Compile Include="Enum\FiltrosAvancados.cs" />
-    <Compile Include="Enum\FiltrosSimples.cs" />
+    <Compile Include="Enum\EnumFiltrarPor.cs" />
+    <Compile Include="Enum\EnumOrdenarPor.cs" />
     <Compile Include="FluentValidation\CEPValidation.cs" />
     <Compile Include="FluentValidation\ClienteValidation.cs" />
     <Compile Include="FluentValidation\CPFValidation.cs" />
@@ -115,16 +115,19 @@
     <Compile Include="FluentValidation\LimiteValidation.cs" />
     <Compile Include="FluentValidation\PessoaValidation.cs" />
     <Compile Include="FluentValidation\TodoODinheiroValidation.cs" />
+    <Compile Include="MensagemGlobal\MensagemAlerta.cs" />
+    <Compile Include="MensagemGlobal\MensagemErro.cs" />
     <Compile Include="Model\Cliente\ClienteListagem.cs" />
     <Compile Include="Model\Cliente\ClienteModel.cs" />
     <Compile Include="Model\EnderecoModel.cs" />
-    <Compile Include="Model\FiltrosClienteModel.cs" />
-    <Compile Include="Model\FiltrosProdutoModel.cs" />
+    <Compile Include="Model\Relatorios\FiltrosClienteModel.cs" />
+    <Compile Include="Model\Relatorios\FiltrosProdutoModel.cs" />
     <Compile Include="Model\Funcionário\FuncionarioListagem.cs" />
     <Compile Include="Model\Funcionário\FuncionarioModel.cs" />
     <Compile Include="Model\Produto\ProdutoListagem.cs" />
     <Compile Include="Model\Pessoa.cs" />
     <Compile Include="Model\Produto\ProdutoModel.cs" />
+    <Compile Include="Model\Relatorios\RelatorioClienteModel.cs" />
     <Compile Include="Model\Relatorios\RelatorioProdutosModel.cs" />
     <Compile Include="Model\Validacoes.cs" />
     <Compile Include="Model\Venda\ListagemVendaModel.cs" />
